[feat] add new correct logic and something else
